[package]
name = "se-rustyconverter"
version = "0.1.0"
edition = "2021"
authors = ["Math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.12.1", features = ["image", "debug"] }
derive_more = "0.99.17"
tokio = "1.37.0"
rfd = "0.14.1"
